Fixed projects buttons and fixed code alignment

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   background-color: white;
   color: #454545;
   margin: 0px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 @media only screen and (max-width: 600px) {
   body {
@@ -14,7 +14,7 @@ body {
 }
 #navbar {
   display: flex;
-  color:white;
+  color: white;
   background-color: #009688;
   justify-content: center;
   width: 100%;
@@ -26,12 +26,12 @@ body {
   padding: 0px 20px;
 }
 .navigation:hover {
-  background-color: rgba(0, 0, 0, .1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 a:link {
   color: white;
   text-decoration: none;
-  transition: 0.5s;
+  transition: 0.2s;
 }
 a:visited {
   color: white;
@@ -40,7 +40,7 @@ a:visited {
 a:hover {
   color: white;
   text-decoration: none;
-  transition: 0.5s;
+  transition: 0.2s;
 }
 a:active {
   color: white;
@@ -63,7 +63,7 @@ a:active {
   flex-direction: column;
   align-items: center;
   background-color: #e1e1e1;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 #projects a:link {
@@ -89,33 +89,54 @@ a:active {
 }
 
 .project-tile {
-background-color: white;
-border-radius: 10px;
-padding: 30px;
-margin: 10px;
-transition: .5s;
-border: 1px solid white;
-height: 300px;
-width: 300px;
+  background-position: 10% 60%;
+  background-repeat: no-repeat;
+  background-size: 140% 140%;
+  background-color: white;
+  border-radius: 10px;
+  margin: 10px;
+  transition: 0.2s;
+  height: 230px;
+  width: 230px;
+}
+.SMSB {
+  background-image: url("https://i.imgur.com/hMa10ew.png");
+}
+.APF {
+  background-image: url("https://i.imgur.com/5x6yJyn.png");
 }
 .project-tile:hover {
-transition: .5s;
-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1), 0 2px 10px 0 rgba(0,0,0,0.1);
-border: 1px solid #009688;
+  transition: 0.2s;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1), 0 2px 10px 0 rgba(0, 0, 0, 0.1);
+  background-position: 10% 80%;
+}
+.SMSB:hover {
+  background-image: url("https://i.imgur.com/xUfG59R.png");
+}
+.APF:hover {
+  background-image: url("https://i.imgur.com/3gWLNiX.png");
 }
 i {
-color: #454545;
-border-radius: 100%;
-transition: .5s;
-padding: 10px;
+  color: #454545;
+  border-radius: 100%;
+  transition: 0.2s;
+  padding: 10px;
 }
 
 i:hover {
-color: #009688;
-transition: .5s;
+  color: #009688;
+  transition: 0.2s;
 }
 
-
 .large-project-div {
-display: flex;
+  display: flex;
+}
+
+.testing {
+  display: flex;
+  justify-content: center;
+  margin-top: 40%;
+  padding-left: 0px;
+  background-color: white;
+  width: 100%;
 }
